[fix] card.html vertical text align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ main div#status {
     height: 50px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 main div#cards {
